@@ -1,5 +1,35 @@
 require 'spec/spec_helper'
 
+describe ActiveHash::Base, "associations when included" do
+  before do
+    class City < ActiveHash::Base
+      silence_stream STDOUT do
+        include ActiveHash::Associations
+      end
+    end
+
+    class Author < ActiveHash::Base
+      silence_stream STDOUT do
+        include ActiveHash::Associations
+      end
+      field :publisher_id
+      field :city_id
+    end
+  end
+
+  after do
+    Object.send :remove_const, :City
+    Object.send :remove_const, :Author
+  end
+
+  it "works until the deprecation period is up" do
+    Author.belongs_to :city
+    city = City.create!
+    author = Author.new :city => city
+    author.city.should == city
+  end
+end
+
 describe ActiveHash::Base, "associations" do
 
   before do
@@ -8,11 +38,11 @@ describe ActiveHash::Base, "associations" do
 
     class City < ActiveHash::Base
       field :country_id
-      include ActiveHash::Associations
+      extend ActiveHash::Associations
     end
 
     class Author < ActiveHash::Base
-      include ActiveHash::Associations
+      extend ActiveHash::Associations
       field :publisher_id
       field :city_id
     end
